.k8s/gateway/gateway.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /kafkaui
            pathType: Prefix
            backend:
              service:
                name: kafka-ui-service
                port:
                  number: 8080
          - path: /kibana/(.*) #accessed by /kibana/
            pathType: Prefix
            backend:
              service:
                name: kibana-service
                port:
                  number: 5601
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: gateway-api-service
                port:
                  number: 8000
